Se reordeno el codigo. Se organizo en partes para su mejor entendimiento

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,7 +25,13 @@
       "imports": [
         "stylus/libs/reset.styl",
         "stylus/componentes/variables.styl",
-        "stylus/gb/gb.styl"
+        "stylus/gb/gb.styl",
+        "stylus/gb/power.styl",
+        "stylus/gb/pantalla.styl",
+        "stylus/gb/cruz.styl",
+        "stylus/gb/opciones.styl",
+        "stylus/gb/botones.styl",
+        "stylus/gb/audio.styl"
       ]
     }
   ],
